--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
                 </div>
             </div>
             
+            <div class="action-bar">
+                <button id="exportBtn" class="btn-outline">📥 匯出 Excel</button>
+                <button id="deleteAllBtn" class="btn-danger-outline">🗑️ 清空所有紀錄</button>
+            </div>
+            
             <div class="records-list" id="recordsList">
                 <!-- 紀錄項目將由 JS 生成 -->
                 <div class="empty-state">尚無紀錄</div>
