--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
         <div class="card">
             <div class="card-header" id="toggleManualBtn">
                 <h3>📝 手動新增紀錄</h3>
-                <span class="toggle-icon">▼</span>
             </div>
-            <div class="card-body" id="manualEntryForm" style="display: none;">
+            <div class="card-body" id="manualEntryForm">
                 <div class="form-row">
                     <div class="form-group">
                         <label>日期</label>
@@ -79,9 +78,8 @@
         <div class="card">
             <div class="card-header" id="toggleCorrectionBtn">
                 <h3>🛠️ 補登/修改休息時間</h3>
-                <span class="toggle-icon">▼</span>
             </div>
-            <div class="card-body" id="correctionForm" style="display: none;">
+            <div class="card-body" id="correctionForm">
                 <div class="form-row">
                     <div class="form-group">
                         <label>選擇日期</label>
