--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
                     <div id="textBackupArea" style="display: none; margin-top: 10px;">
                         <textarea id="backupTextarea" rows="5" placeholder="備份代碼將顯示於此，或在此貼上代碼以還原..." style="width: 100%; padding: 10px; border: 1px solid #ddd; border-radius: 6px; font-family: monospace; font-size: 0.8rem;"></textarea>
                         <div class="action-buttons-small" style="margin-top: 5px;">
-                            <button id="copyTextBtn" class="btn-small">📋 複製代碼</button>
-                            <button id="importTextBtn" class="btn-secondary">📥 從文字還原</button>
+                            <button id="copyTextBtn" class="btn-small">📋 複製</button>
+                            <button id="shareTextBtn" class="btn-small" style="display: none;">📤 分享</button>
+                            <button id="importTextBtn" class="btn-secondary">📥 還原</button>
                         </div>
+                        <p class="hint-text" style="margin-top: 5px; color: #888;">提示：若 LINE 瀏覽器無法複製，請長按文字框手動全選複製，或使用「分享」按鈕。</p>
                     </div>
                 </div>
             </div>
