--- a/index.html
+++ b/index.html
@@ -162,7 +162,10 @@
                     <label>備註</label>
                     <input type="text" id="bonusNote" placeholder="例如：Altis 成交獎金">
                 </div>
-                <button id="addBonus" class="btn-secondary">新增備忘錄</button>
+                <div class="action-buttons-small" style="margin-top: 5px;">
+                    <button id="addBonus" class="btn-secondary">新增備忘錄</button>
+                    <button id="clearBonus" class="btn-danger-outline">🗑️ 清空備忘錄</button>
+                </div>
                 <div class="bonus-summary" id="bonusSummary">本月獎金合計：$0</div>
                 <div class="bonus-list" id="bonusList">
                     <div class="empty-state">尚無備忘錄</div>
